fix: update spacing to 8px

--- a/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
@@ -999,7 +999,7 @@ $duration: 1000ms;
     }
 
     .#{$carbon-prefix}--tag {
-      margin-inline-end: $spacing-02;
+      margin-inline-end: $spacing-03;
     }
   }
 
