--- a/packages/ibm-products-styles/src/components/TagSet/_tag-set.scss
+++ b/packages/ibm-products-styles/src/components/TagSet/_tag-set.scss
@@ -41,7 +41,7 @@ $block-class-modal: #{$block-class}-modal;
   .#{$block-class}__tag-container {
     display: inline-flex; // needed to register a width
     // Spacing between tags.
-    gap: $spacing-02;
+    gap: $spacing-03;
     white-space: nowrap;
   }
 
@@ -98,8 +98,8 @@ $block-class-modal: #{$block-class}-modal;
 
   .#{$block-class-modal}__body {
     .#{$carbon-prefix}--tag {
-      margin-block-end: $spacing-02;
-      margin-inline-end: $spacing-02;
+      margin-block-end: $spacing-03;
+      margin-inline-end: $spacing-03;
     }
   }
 }
@@ -125,9 +125,10 @@ $block-class-modal: #{$block-class}-modal;
 
   .#{$block-class-overflow}__show-all-tags-link {
     color: $link-inverse;
-    margin-block-start: $spacing-04;
+    margin-block-start: $spacing-03;
 
-    &:hover {
+    &:hover,
+    &:visited:hover {
       color: $link-inverse-hover;
     }
 
