--- a/packages/ibm-products-web-components/examples/set-of-tags/src/set-of-tags.scss
+++ b/packages/ibm-products-web-components/examples/set-of-tags/src/set-of-tags.scss
@@ -26,7 +26,7 @@ $block-class: #{$prefix}--set-of-tags;
     display: flex;
     white-space: nowrap;
     // Spacing between tags.
-    gap: 4px;
+    gap: $spacing-03;
 
     &__popover-container {
       padding: 0.9rem;
