--- a/packages/ibm-products-web-components/src/components/page-header/_story-assets/set-of-tags/set-of-tags.scss
+++ b/packages/ibm-products-web-components/src/components/page-header/_story-assets/set-of-tags/set-of-tags.scss
@@ -27,7 +27,7 @@ $block-class: #{$prefix}--set-of-tags;
   .#{$block-class} {
     display: flex;
     // Spacing between tags.
-    gap: $spacing-02;
+    gap: $spacing-03;
     box-sizing: border-box;
     justify-content: flex-end;
     inline-size: 100%;
