--- a/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
+++ b/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
@@ -29,7 +29,7 @@ $story-prefix: 'overflow-handler-stories__';
 .items {
   display: flex;
   // Spacing between tags.
-  gap: spacing.$spacing-02;
+  gap: spacing.$spacing-03;
   white-space: nowrap;
 
   &--vertical {
