--- a/packages/ibm-products/src/global/js/hooks/useOverflowItems/_storybook-styles.scss
+++ b/packages/ibm-products/src/global/js/hooks/useOverflowItems/_storybook-styles.scss
@@ -28,6 +28,6 @@ $carbon-prefix: 'cds';
   }
 
   .#{$carbon-prefix}--tag {
-    margin: 0 $spacing-02 $spacing-02 0;
+    margin: 0 $spacing-03 $spacing-03 0;
   }
 }
